lab2/bastion.tf
resource "aws_instance" "bastionhost" {
  ami                    = data.aws_ami.amazon-linux-2.id
  instance_type          = "t2.micro"
  subnet_id              = aws_subnet.public_subnet.id
  key_name               = aws_key_pair.kp.key_name
  vpc_security_group_ids = [aws_security_group.bastion_sg.id]

}
